@@ -1,3 +1,8 @@
+2007-10-23  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c.in (R_igraph_attribute_copy) :
+	updated, ga, va, ea attributes added
+
 2007-10-22  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/centrality.R (evcent) : outdated, removed,
